# ml-3

./: .gitignore  README.md  pyproject.toml  test.py
conf/: config.py  config.yaml  settings.yaml
conf/backend/: keras.yaml  tensorflow.yaml
conf/dataset/: fashion_mnist.yaml  mnist.yaml
conf/hydra/job_logging/: custom_job.yaml
conf/model/: conv.yaml  lenet5.yaml  linear.yaml  nn.yaml
ml_3/: __main__.py
ml_3/definitions/: constans.py  constants.py
ml_3/factories/: dataset.py  model.py
ml_3/model/: baseline_factories.py  baseline_model.py  layers.py  load_and_preprocess_dataset.py  train.py
ml_3/model/initializers/: initializer.py
ml_3/model/regularizers/: __init__.py  regularizer.py
ml_3/patterns/: model.py
ml_3/utils/: callbacks.py  tools.py
tests/: test_regularizers.py
