[project]
name = "ml-3"
version = "0.1.0"
description = ""
authors = [
    {name = "thanakara",email = "dngus1717@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
run = "ml_3.__main__:main"